# rl-audio-device-hotkey

./: Cargo.toml  LICENSE.txt  README.md
bindings/: Cargo.toml  build.rs
src/: audio_device.rs  keyboard_hook.rs  main.rs  window.rs
