[package]
name = "rl-audio-device-hotkey"
version = "0.1.0"
authors = ["Riley Labrecque <git@rileylabrecque.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { package = "bindings", path = "bindings" }
windows = "0.7.0"
widestring = "0.4.3"
